--- a/casadocodigo/Interface/Base.lproj/Main.storyboard
+++ b/casadocodigo/Interface/Base.lproj/Main.storyboard
@@ -217,7 +217,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vPI-FD-avp" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1447.3333333333333"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="YEZ-DL-c43" userLabel="Titles Stack">
+                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="YEZ-DL-c43" userLabel="Titles Stack">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="638"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="agi-Bs-wSF" customClass="SectionTitle" customModule="casadocodigo" customModuleProvider="target">
@@ -245,41 +245,41 @@
                                                             <constraint firstItem="4dP-pQ-6mL" firstAttribute="centerY" secondItem="9tE-eV-8Zh" secondAttribute="centerY" id="pxG-g6-n62"/>
                                                         </constraints>
                                                     </view>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qob-kE-nWH" userLabel="Cover Path Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qob-kE-nWH" userLabel="Cover Path Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="408" width="382" height="60.666666666666686"/>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yJY-7h-4FI" userLabel="Title Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yJY-7h-4FI" userLabel="Title Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="484.66666666666669" width="382" height="60.666666666666686"/>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Wxi-TL-1ft" userLabel="Subtitle Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Wxi-TL-1ft" userLabel="Subtitle Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="561.33333333333337" width="382" height="60.666666666666629"/>
                                                     </stackView>
                                                 </subviews>
                                                 <directionalEdgeInsets key="directionalLayoutMargins" top="16" leading="16" bottom="16" trailing="16"/>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="qUR-gO-Rwl" userLabel="Prices Stack">
+                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="qUR-gO-Rwl" userLabel="Prices Stack">
                                                 <rect key="frame" x="0.0" y="638" width="414" height="250"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Lhg-O9-icM" userLabel="eBook Price Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Lhg-O9-icM" userLabel="eBook Price Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="15.999999999999996" width="382" height="60.666666666666657"/>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="j4n-md-a4R" userLabel="Hardcover Price Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="j4n-md-a4R" userLabel="Hardcover Price Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="92.666666666666629" width="382" height="60.666666666666657"/>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8TS-63-Ev1" userLabel="Combo Price Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8TS-63-Ev1" userLabel="Combo Price Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="169.33333333333337" width="382" height="60.666666666666657"/>
                                                     </stackView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.94901960780000005" green="0.94117647059999998" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <directionalEdgeInsets key="directionalLayoutMargins" top="16" leading="16" bottom="20" trailing="16"/>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="BIw-Hn-7Ya" userLabel="Product Content Stack">
-                                                <rect key="frame" x="0.0" y="888.00000000000011" width="414" height="501.33333333333337"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="BIw-Hn-7Ya" userLabel="Product Content Stack">
+                                                <rect key="frame" x="0.0" y="888" width="414" height="501.33333333333337"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HBf-4K-fRM" userLabel="Description Input" customClass="ValidatedLargeTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HBf-4K-fRM" userLabel="Description Input" customClass="ValidatedLargeTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="16" width="382" height="146.66666666666666"/>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0xy-Zf-wI0" userLabel="Author Input">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0xy-Zf-wI0" userLabel="Author Input">
                                                         <rect key="frame" x="16" y="178.66666666666674" width="382" height="60.666666666666657"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autor:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aIp-oJ-QrG" userLabel="Autor:">
@@ -296,7 +296,7 @@
                                                             </textField>
                                                         </subviews>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="o1B-DP-KWS" userLabel="Publication Input ">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="o1B-DP-KWS" userLabel="Publication Input ">
                                                         <rect key="frame" x="16" y="255.33333333333323" width="382" height="76.666666666666657"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data de Publicação:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hlj-WN-546">
@@ -305,16 +305,16 @@
                                                                 <color key="textColor" red="0.42352941179999998" green="0.41568627450000001" blue="0.41176470590000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="FNs-kP-tZ4">
+                                                            <datePicker contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="FNs-kP-tZ4">
                                                                 <rect key="frame" x="0.0" y="26.666666666666742" width="382" height="50"/>
                                                                 <locale key="locale" localeIdentifier="pt_BR"/>
                                                             </datePicker>
                                                         </subviews>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="M15-mD-elU" userLabel="Pages Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="M15-mD-elU" userLabel="Pages Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="348" width="382" height="60.666666666666686"/>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5L1-TU-Wsj" userLabel="ISBN Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5L1-TU-Wsj" userLabel="ISBN Input" customClass="ValidatedTextInput" customModule="casadocodigo" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="424.66666666666674" width="382" height="60.666666666666686"/>
                                                     </stackView>
                                                 </subviews>
