--- a/casadocodigo/Interface/Base.lproj/Main.storyboard
+++ b/casadocodigo/Interface/Base.lproj/Main.storyboard
@@ -1291,30 +1291,42 @@
                                                         <constraint firstAttribute="trailing" secondItem="EZi-bv-aXh" secondAttribute="trailing" id="tvR-Wd-fQi"/>
                                                     </constraints>
                                                 </view>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="V8t-17-wtd">
-                                                    <rect key="frame" x="12" y="144" width="358" height="50"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" verticalHuggingPriority="249" verticalCompressionResistancePriority="751" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6MK-jG-dpL">
+                                                    <rect key="frame" x="16" y="148" width="350" height="42"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="68" id="eJz-G0-ems"/>
+                                                    </constraints>
                                                     <string key="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</string>
-                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="eJz-G0-ems"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="widthClass=regular">
+                                                        <mask key="constraints">
+                                                            <include reference="eJz-G0-ems"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Sy5-qo-vYt" firstAttribute="top" secondItem="g7U-6C-pEa" secondAttribute="top" constant="12" id="8P2-2C-knU"/>
-                                                <constraint firstItem="V8t-17-wtd" firstAttribute="leading" secondItem="g7U-6C-pEa" secondAttribute="leading" constant="12" id="8Yx-gT-dqb"/>
-                                                <constraint firstAttribute="bottom" secondItem="V8t-17-wtd" secondAttribute="bottom" constant="12" id="VHy-E3-5KA"/>
-                                                <constraint firstAttribute="trailing" secondItem="V8t-17-wtd" secondAttribute="trailing" constant="12" id="gC2-Xs-wn5"/>
-                                                <constraint firstItem="V8t-17-wtd" firstAttribute="top" secondItem="Sy5-qo-vYt" secondAttribute="bottom" constant="12" id="vZ0-6I-wND"/>
+                                                <constraint firstAttribute="trailing" secondItem="6MK-jG-dpL" secondAttribute="trailing" constant="16" id="UFC-Q5-Sj5"/>
+                                                <constraint firstAttribute="bottom" secondItem="6MK-jG-dpL" secondAttribute="bottom" constant="16" id="oE4-pM-RKw"/>
                                                 <constraint firstItem="Sy5-qo-vYt" firstAttribute="leading" secondItem="g7U-6C-pEa" secondAttribute="leading" constant="12" id="wr6-9g-lbg"/>
+                                                <constraint firstItem="6MK-jG-dpL" firstAttribute="top" secondItem="Sy5-qo-vYt" secondAttribute="bottom" constant="16" id="xq9-Ie-Hu8"/>
                                                 <constraint firstAttribute="trailing" secondItem="Sy5-qo-vYt" secondAttribute="trailing" constant="12" id="yHg-uT-UFn"/>
+                                                <constraint firstItem="6MK-jG-dpL" firstAttribute="leading" secondItem="g7U-6C-pEa" secondAttribute="leading" constant="16" id="zUj-7E-vTg"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <directionalEdgeInsets key="directionalLayoutMargins" top="12" leading="12" bottom="12" trailing="12"/>
                                         <size key="customSize" width="382" height="206"/>
                                         <connections>
-                                            <outlet property="authorBioTextView" destination="V8t-17-wtd" id="Gu0-nb-B0Q"/>
+                                            <outlet property="authorBioLabel" destination="6MK-jG-dpL" id="tfI-ws-W95"/>
                                             <outlet property="authorMenuButton" destination="rzx-Bn-mgz" id="Z8C-jI-q4a"/>
                                             <outlet property="authorNameLabel" destination="805-OL-5NH" id="S1T-0t-ZTb"/>
                                             <outlet property="authorPictureView" destination="SGD-i0-7mq" id="AHm-d1-IkW"/>
@@ -1355,7 +1367,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zrs-un-2RK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="350.72463768115944" y="154.6875"/>
+            <point key="canvasLocation" x="351" y="155"/>
         </scene>
         <!--Author Form-->
         <scene sceneID="ywp-nL-Rgy">
